--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,26 @@
-version: '3.8'
-
 services:
+  frontend:
+    container_name: ui
+    build:
+      context: ./ui
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./ui:/app:cached
+    depends_on:
+      - backend
+    networks:
+      - api_network
+
   backend:
     container_name: api
     build:
-      dockerfile: dockerfile
-      context: .
-    env_file: .env.docker
+      context: ./api
+      dockerfile: Dockerfile
+    env_file: ./api/.env
     ports:
-      - '8080:8080'
+      - "8080:8080"
     volumes:
       - ./api:/home/app:cached
       - ./api/package.json:/home/app/package.json:cached
@@ -30,7 +42,7 @@ services:
     networks:
       - api_network
     healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -U postgres']
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 1m30s
       timeout: 30s
       retries: 5
